--- a/nazmul.ipynb
+++ b/nazmul.ipynb
@@ -562,7 +562,9 @@
         "    return vec.view(1, -1)\n",
         "\n",
         "def make_target(label):\n",
-        "    return torch.LongTensor([label]).cuda()\n"
+        "    return torch.LongTensor([label]).cuda()\n",
+        "def make_target2(label):\n",
+        "    return torch.FloatTensor([label]).cuda()  \n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3541,13 +3543,13 @@
         "  def __init__(self, num_labels, vocab_size):\n",
         "    super(Task6, self).__init__()\n",
         "    self.lin = nn.Linear(VOCAB_SIZE1, 30)\n",
-        "    self.lin3 = nn.Linear(30, 20)\n",
-        "    self.lin4 = nn.Linear(20, 10)\n",
-        "    self.lin2 = nn.Linear(10, num_labels)\n",
+        "    self.lin1 = nn.Linear(30, 20)\n",
+        "    self.lin2 = nn.Linear(20, 10)\n",
+        "    self.lin3 = nn.Linear(10, num_labels)\n",
         "    self.dp=nn.Dropout(p=0.1)\n",
         " \n",
         "  def forward(self, x):\n",
-        "    return F.softmax(self.lin2(self.lin1(self.lin(x))))"
+        "    return F.softmax(self.lin3(self.lin2(self.lin1(self.lin(x)))))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3560,7 +3562,7 @@
       },
       "cell_type": "code",
       "source": [
-        "Task_6 = Task6(NUM_LABELS, VOCAB_SIZE1).cuda()"
+        "Task_6 = Task6(NUM_LABELS, VOCAB_SIZE1).cpu()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3633,9 +3635,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 402
+          "height": 367
         },
-        "outputId": "b09b81eb-db7e-42bc-f80b-249c5ec12450"
+        "outputId": "4661b694-b5b6-4e22-f347-f4bb03bc90a7"
       },
       "cell_type": "code",
       "source": [
@@ -3672,38 +3674,70 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))"
       ],
-      "execution_count": 64,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0\n",
-            "CURRENT LOSS: -0.6510540843009949\n",
-            "1\n",
-            "CURRENT LOSS: -0.6657568216323853\n",
-            "2\n",
-            "CURRENT LOSS: -0.647550642490387\n",
-            "3\n",
-            "CURRENT LOSS: -0.6279408931732178\n",
-            "4\n",
-            "CURRENT LOSS: -0.6470508575439453\n",
-            "5\n",
-            "CURRENT LOSS: -0.6595475077629089\n",
-            "--- AFTER TRAINING ---\n",
-            "Precision: 0.0\n",
-            "Recall: 0.0\n",
-            "f1-score: 0.0\n",
-            "Accuracy: 0.4964\n"
+            "0\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
-            "  'precision', 'predicted', average, warn_for)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-            "  'precision', 'predicted', average, warn_for)\n"
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "CURRENT LOSS: -6.881324394851507e-13\n",
+            "1\n",
+            "CURRENT LOSS: -1.8443842649825574e-28\n",
+            "2\n",
+            "CURRENT LOSS: 0.0\n",
+            "3\n",
+            "CURRENT LOSS: -7.550322242643904e-39\n",
+            "4\n",
+            "CURRENT LOSS: -8.667467310138846e-37\n",
+            "5\n",
+            "CURRENT LOSS: 0.0\n",
+            "--- AFTER TRAINING ---\n",
+            "Precision: 0.6602316602316602\n",
+            "Recall: 0.8149324861000794\n",
+            "f1-score: 0.7294703163881977\n",
+            "Accuracy: 0.6956\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "r4VvZJaHVAmB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "5a210038-7b82-4ac4-9244-95d5ea62e205"
+      },
+      "cell_type": "code",
+      "source": [
+        "torch.save(Task_6,\"Task6.mdl\")\n",
+        "from google.colab import files\n",
+        "files.download(\"Task6.mdl\")"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type Task6. It won't be checked for correctness upon loading.\n",
+            "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
           ],
           "name": "stderr"
         }
@@ -3938,7 +3972,7 @@
       "source": [
         "# define a loss function and an optimizer\n",
         "loss_functionTasK7B = nn.MSELoss()\n",
-        "optTask7B = torch.optim.SGD(Task_7B.parameters(), lr = 0.005)"
+        "optTask7B = torch.optim.SGD(Task_7B.parameters(), lr = 0.05)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3947,10 +3981,10 @@
       "metadata": {
         "id": "b47tWXlKUe3u",
         "colab_type": "code",
-        "outputId": "41a5d30c-1694-4f50-c9bd-f09e51cd4b73",
+        "outputId": "2d1474aa-ea69-4d40-cb2e-69dd798e32b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 672
+          "height": 253
         }
       },
       "cell_type": "code",
@@ -3963,7 +3997,7 @@
         "        # get the training data\n",
         "        Task_7B.zero_grad()\n",
         "        bow_vec = Variable(make_bow_vector(instance, word_to_ix)).cuda()\n",
-        "        label = Variable(make_target(label))\n",
+        "        label = Variable(make_target2(label))\n",
         "        probs = Task_7B(bow_vec) # forward pass\n",
         "        loss = loss_functionTasK7B(probs, label)\n",
         "        loss.backward()\n",
@@ -3988,7 +4022,7 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
       ],
-      "execution_count": 0,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -3998,25 +4032,14 @@
           "name": "stdout"
         },
         {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-            "  # This is added back by InteractiveShellApp.init_path()\n"
-          ],
-          "name": "stderr"
-        },
-        {
           "output_type": "error",
-          "ename": "RuntimeError",
+          "ename": "NameError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-129-ee2d255434ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmake_target\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mprobs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTask_7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbow_vec\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_functionTasK7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0moptTask7B\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    487\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    488\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 489\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    490\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    491\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/loss.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    433\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mweak_script_method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    434\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 435\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    436\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    437\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mmse_loss\u001b[0;34m(input, target, size_average, reduce, reduction)\u001b[0m\n\u001b[1;32m   2154\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2155\u001b[0m         \u001b[0mexpanded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpanded_target\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbroadcast_tensors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2156\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpanded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpanded_target\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2157\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: Expected object of scalar type Float but got scalar type Long for argument #2 'target'"
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-93-323347b49585>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mTask_7B\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mbow_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmake_bow_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmake_target2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mprobs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTask_7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbow_vec\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_functionTasK7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'make_target2' is not defined"
           ]
         }
       ]
