--- a/nazmul.ipynb
+++ b/nazmul.ipynb
@@ -3957,7 +3957,7 @@
       },
       "cell_type": "code",
       "source": [
-        "Task_7B = Task7B(NUM_LABELS, VOCAB_SIZE).cuda()"
+        "Task_7B = Task7B(NUM_LABELS, VOCAB_SIZE).cpu()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3981,10 +3981,10 @@
       "metadata": {
         "id": "b47tWXlKUe3u",
         "colab_type": "code",
-        "outputId": "2d1474aa-ea69-4d40-cb2e-69dd798e32b5",
+        "outputId": "7b2087c7-8dd5-4bfb-87d5-dd2c2ec21976",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 253
+          "height": 332
         }
       },
       "cell_type": "code",
@@ -4022,7 +4022,7 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
       ],
-      "execution_count": 93,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -4032,15 +4032,32 @@
           "name": "stdout"
         },
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-93-323347b49585>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mTask_7B\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mbow_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmake_bow_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmake_target2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mprobs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTask_7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbow_vec\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_functionTasK7B\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'make_target2' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "CURRENT LOSS: 0.25000080466270447\n",
+            "1\n",
+            "CURRENT LOSS: 0.25000059604644775\n",
+            "2\n",
+            "CURRENT LOSS: 0.2500004470348358\n",
+            "3\n",
+            "CURRENT LOSS: 0.25000032782554626\n",
+            "4\n",
+            "CURRENT LOSS: 0.2500002980232239\n",
+            "--- AFTER TRAINING ---\n",
+            "Precision: 0.4931075226467113\n",
+            "Recall: 0.49722001588562353\n",
+            "f1-score: 0.4951552303737394\n",
+            "Accuracy: 0.4894\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -4048,7 +4065,11 @@
       "metadata": {
         "id": "LSf1I6a4VE0Z",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "13d8e722-f26b-4767-ddee-42339d9cf02f"
       },
       "cell_type": "code",
       "source": [
@@ -4056,8 +4077,17 @@
         "from google.colab import files\n",
         "files.download(\"Task7B.mdl\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type Task7B. It won't be checked for correctness upon loading.\n",
+            "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "metadata": {
@@ -4100,7 +4130,7 @@
       },
       "cell_type": "code",
       "source": [
-        "Task_7C = Task7C(NUM_LABELS, VOCAB_SIZE).cuda()"
+        "Task_7C = Task7C(NUM_LABELS, VOCAB_SIZE).cpu()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -4115,7 +4145,7 @@
       "source": [
         "# define a loss function and an optimizer\n",
         "loss_functionTask7C = nn.HingeEmbeddingLoss()\n",
-        "optTask7C = torch.optim.SGD(Task_7C.parameters(), lr = 0.001)"
+        "optTask7C = torch.optim.SGD(Task_7C.parameters(), lr = 0.01)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -4124,17 +4154,17 @@
       "metadata": {
         "id": "99iH2dYIPuOW",
         "colab_type": "code",
-        "outputId": "c8a0a22e-0e62-4243-ed19-183f4bd47a81",
+        "outputId": "ae6a94a7-7da2-443a-e4d0-24f5af349dad",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 853
+          "height": 367
         }
       },
       "cell_type": "code",
       "source": [
         "# Task7C\n",
         "# the training loop\n",
-        "for epoch in range(20):\n",
+        "for epoch in range(6):\n",
         "    print(epoch)\n",
         "    for instance, label in data:\n",
         "        # get the training data\n",
@@ -4165,7 +4195,7 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
       ],
-      "execution_count": 0,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -4196,39 +4226,11 @@
             "CURRENT LOSS: 1.0\n",
             "5\n",
             "CURRENT LOSS: 1.0\n",
-            "6\n",
-            "CURRENT LOSS: 1.0\n",
-            "7\n",
-            "CURRENT LOSS: 1.0\n",
-            "8\n",
-            "CURRENT LOSS: 1.0\n",
-            "9\n",
-            "CURRENT LOSS: 1.0\n",
-            "10\n",
-            "CURRENT LOSS: 1.0\n",
-            "11\n",
-            "CURRENT LOSS: 1.0\n",
-            "12\n",
-            "CURRENT LOSS: 1.0\n",
-            "13\n",
-            "CURRENT LOSS: 1.0\n",
-            "14\n",
-            "CURRENT LOSS: 1.0\n",
-            "15\n",
-            "CURRENT LOSS: 1.0\n",
-            "16\n",
-            "CURRENT LOSS: 1.0\n",
-            "17\n",
-            "CURRENT LOSS: 1.0\n",
-            "18\n",
-            "CURRENT LOSS: 1.0\n",
-            "19\n",
-            "CURRENT LOSS: 1.0\n",
             "--- AFTER TRAINING ---\n",
-            "Precision: 0.3888888888888889\n",
-            "Recall: 0.0027799841143764893\n",
-            "f1-score: 0.005520504731861199\n",
-            "Accuracy: 0.4956\n"
+            "Precision: 0.5036\n",
+            "Recall: 1.0\n",
+            "f1-score: 0.6698590050545358\n",
+            "Accuracy: 0.5036\n"
           ],
           "name": "stdout"
         }
@@ -4238,7 +4240,11 @@
       "metadata": {
         "id": "kh_TFQGJPuDG",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "8e773f5a-1287-44e0-e89a-15cccadd4b59"
       },
       "cell_type": "code",
       "source": [
@@ -4246,8 +4252,17 @@
         "from google.colab import files\n",
         "files.download(\"Task7C.mdl\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/torch/serialization.py:251: UserWarning: Couldn't retrieve source code for container of type Task7C. It won't be checked for correctness upon loading.\n",
+            "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "metadata": {
