--- a/nazmul.ipynb
+++ b/nazmul.ipynb
@@ -6,6 +6,7 @@
       "name": "Untitled1.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +63,7 @@
       "source": [
         "nltk.download('wordnet')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +101,7 @@
       "source": [
         "nltk.download('punkt')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +139,7 @@
       "source": [
         "nltk.download('stopwords')"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +238,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -382,7 +383,36 @@
         "              if count[word] >= 6:\n",
         "                word_to_ix[word] = len(word_to_ix)\n",
         "                \n",
-        "  return word_to_ix"
+        "  return word_to_ix\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "rkc1r_56opf0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "with open('word_to_ix.csv','w') as f:\n",
+        "  for word in word_to_ix:\n",
+        "    f.write(word+\"\\t\"+str(word_to_ix[word]) + \"\\n\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "jXAOZ0MupzJ1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -421,7 +451,7 @@
         "NUM_LABELS = 2\n",
         "print(VOCAB_SIZE)"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,11 +499,11 @@
       "metadata": {
         "id": "qFe-Rx-s8VDB",
         "colab_type": "code",
+        "outputId": "79d33d4c-80d2-4a83-fad1-098c24830641",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "79d33d4c-80d2-4a83-fad1-098c24830641"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -484,7 +514,7 @@
         "#print (VOCAB_SIZE)\n",
         "print(VOCAB_SIZE1, biagram_to_ix)"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3458,7 +3488,7 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))"
       ],
-      "execution_count": 75,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3509,7 +3539,7 @@
         "from google.colab import files\n",
         "files.download(\"Task5C.mdl\")"
       ],
-      "execution_count": 78,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3583,61 +3613,13 @@
     },
     {
       "metadata": {
-        "id": "Oqoasr0EDpPF",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
-        },
-        "outputId": "b8e54469-de9d-42de-cb7c-8bc747d9fcb9"
-      },
-      "cell_type": "code",
-      "source": [
-        "for instance in text_review_pre_train:\n",
-        "    # get the training data\n",
-        "    label=text_labels_train_list[i]\n",
-        "    bow6.zero_grad()\n",
-        "    bow_vec = Variable(make_bow_vector(instance, word_to_ix)).to('cuda:0')\n",
-        "    label = Variable(make_target(label)).to('cuda:0')\n",
-        "\n",
-        "    probs = bow6(bow_vec) # forward pass\n",
-        "    #print((probs),(label))\n",
-        "    loss = loss_function(probs, label)\n",
-        "    loss.backward()\n",
-        "#     print('CURRENT LOSS: {}'.format(loss.data))\n",
-        "    opt.step()\n",
-        "#     Accuracy(text_review_pre_train,text_labels_train)\n",
-        "\n",
-        "    total_loss+=loss.item()\n",
-        "    if text_labels_train[i] == int(torch.argmax(probs, dim =1).data):\n",
-        "      total_acc += 1\n",
-        "    \n",
-        "    i += 1\n",
-        "  print(\"EPOCH: \", epoch)\n",
-        "  print(\"TRG LOSS:  \", total_loss/i)\n",
-        "  print(\"TRG ACCURACY: \",total_acc/i)"
-      ],
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-63-55e8a6767231>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    print(\"EPOCH: \", epoch)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
         "id": "pTwczfFADpbN",
         "colab_type": "code",
+        "outputId": "4661b694-b5b6-4e22-f347-f4bb03bc90a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 367
-        },
-        "outputId": "4661b694-b5b6-4e22-f347-f4bb03bc90a7"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -3674,7 +3656,7 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))"
       ],
-      "execution_count": 86,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3719,11 +3701,11 @@
       "metadata": {
         "id": "r4VvZJaHVAmB",
         "colab_type": "code",
+        "outputId": "5a210038-7b82-4ac4-9244-95d5ea62e205",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "5a210038-7b82-4ac4-9244-95d5ea62e205"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -3731,7 +3713,7 @@
         "from google.colab import files\n",
         "files.download(\"Task6.mdl\")"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4022,7 +4004,7 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4065,11 +4047,11 @@
       "metadata": {
         "id": "LSf1I6a4VE0Z",
         "colab_type": "code",
+        "outputId": "13d8e722-f26b-4767-ddee-42339d9cf02f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "13d8e722-f26b-4767-ddee-42339d9cf02f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -4077,7 +4059,7 @@
         "from google.colab import files\n",
         "files.download(\"Task7B.mdl\")"
       ],
-      "execution_count": 98,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4195,7 +4177,7 @@
         "print('f1-score: {}'.format(f1_score(test_labels,predictions)))\n",
         "print('Accuracy: {}'.format(accuracy_score(test_labels,predictions)))\n"
       ],
-      "execution_count": 102,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4240,11 +4222,11 @@
       "metadata": {
         "id": "kh_TFQGJPuDG",
         "colab_type": "code",
+        "outputId": "8e773f5a-1287-44e0-e89a-15cccadd4b59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "8e773f5a-1287-44e0-e89a-15cccadd4b59"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -4252,7 +4234,7 @@
         "from google.colab import files\n",
         "files.download(\"Task7C.mdl\")"
       ],
-      "execution_count": 105,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
